# Snake-Game

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: FoodGenerator.cpp  FoodGenerator.h  Game.cpp  Game.h  Playground.cpp  Playground.h  PlaygroundGraphicView.cpp  PlaygroundGraphicView.h  PlaygroundView.cpp  PlaygroundView.h  Point.cpp  Point.h  Snake.cpp  Snake.h  Window.cpp  Window.h  main.cpp
